Fixed indentation in code

--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
         </div>
         <div class="col-9">
             <p class="h3">Deathproof</p>
-            <p class="p"><a href="https://www.wikiwand.com/en/Death_Proof" target="_blank">Death Proof</a> is a 2007 American exploitation film written and directed by Quentin Tarantino. It stars Kurt Russell as a stuntman who murders young women in staged car accidents using his "death-proof" stunt car. It co-stars Rosario Dawson, Vanessa Ferlito, Jordan Ladd, Rose McGowan, Sydney Tamiia Poitier, Tracie Thoms and Mary Elizabeth Winstead, with stuntwoman Zoë Bell as herself. The film pays homage to the slasher, exploitation and muscle car films of the 1970s.</p>
+            <p class="p"><a href="https://www.wikiwand.com/en/Death_Proof" target="_blank">Death Proof</a> is a 2007 American exploitation film written and directed by Quentin Tarantino. It stars Kurt Russell as a stuntman who murders young women in staged car accidents using his "death-proof" stunt car. It co-stars Rosario Dawson, Vanessa Ferlito, Jordan Ladd, Rose McGowan, Sydney Tamiia Poitier, Tracie Thoms and Mary Elizabeth Winstead, with stuntwoman Zoë Bell as herself. The film pays homage to the slasher, exploitation and muscle car films of the 1970s.
+            </p>
         </div>
     </div>
     
     <div class="row row-or">  
         <div class="col-9 offset-2">
             <p class="h3">Pulp Fiction</p>
-            <p class="p"><a href="https://www.wikiwand.com/en/Pulp_Fiction" target="_blank">Pulp Fiction</a> is a 1994 American neo-noir crime black comedy film written and directed by Quentin Tarantino, from a story by Tarantino and Roger Avary.[4] Tarantino's second feature film is iconic for its eclectic dialogue, ironic mix of humor and violence, nonlinear storyline, and a host of cinematic allusions and pop culture references. The film was nominated for seven Oscars, including Best Picture; Tarantino and Avary won for Best Original Screenplay. It was also awarded the Palme d'Or at the 1994 Cannes Film Festival. A major critical and commercial success, it revitalized the career of its leading man, John Travolta, who received an Academy Award nomination, as did co-stars Samuel L. Jackson and Uma Thurman.</p>
+            <p class="p"><a href="https://www.wikiwand.com/en/Pulp_Fiction" target="_blank">Pulp Fiction</a> is a 1994 American neo-noir crime black comedy film written and directed by Quentin Tarantino, from a story by Tarantino and Roger Avary.[4] Tarantino's second feature film is iconic for its eclectic dialogue, ironic mix of humor and violence, nonlinear storyline, and a host of cinematic allusions and pop culture references. The film was nominated for seven Oscars, including Best Picture; Tarantino and Avary won for Best Original Screenplay. It was also awarded the Palme d'Or at the 1994 Cannes Film Festival. A major critical and commercial success, it revitalized the career of its leading man, John Travolta, who received an Academy Award nomination, as did co-stars Samuel L. Jackson and Uma Thurman.
+            </p>
         </div>
         <div class="col-3 pf img">
         </div>
